Fixed a bug where menu colors overlapped in Light Mode

--- a/src/pages/blog/[slug].module.css
+++ b/src/pages/blog/[slug].module.css
@@ -56,7 +56,7 @@
 .articleBody h1 {
     font-size: 28px;
     margin-top: 64px;
-    padding: 0 0 16px 0;
+    padding: 0 0 12px 0;
     position: relative;
     color: var(--text-color);
 }
@@ -74,7 +74,7 @@
 
 .articleBody h2 {
     font-size: 24px;
-    padding: 0 0 12px 16px;
+    padding: 0 0 4px 16px;
     position: relative;
     color: var(--text-color);
 }
